# langflow-plyground

./: .env.template  .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
chroma_db_oai/: chroma.sqlite3
mymodule/: __init__.py  app.py
mymodule/pages/: 1_simple_chat.py  4_research_automation.py
mymodule/util/: base_ui.py
